--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,10 @@
-h3 {
-    color: rgb(4, 4, 73);
-}
-/* body {
-    padding: 0;
-    margin: 0;
-} */
+.button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
 
