change folder structure

--- a/static/style.css
+++ b/static/style.css
@@ -8,3 +8,11 @@
     font-size: 16px;
   }
 
+  .bubbles {
+    stroke-width: 1px;
+    stroke: black;
+    opacity: .8
+  }
+  .bubbles:hover {
+    stroke: black;
+  }
